# intro_revit

./: .gitignore  404.html  EstudoDeMassas  Home.dyn  README.md  _config.yml  index.html  mkdocs.yml  pixi.toml  pyproject.toml  pyprojectold.toml  sitemap.xml  teste.0001.rvt  teste.rvt
Anotacoes/: cotas.html  cotas.md  norte.html  norte.md
BIM_intro/: bim_intro.html  levels_mat.html  sf-bim-project-execution-plan-template_apr2021.docx
EditaisDasAvaliacoes/: Readme.html  Readme.md
EstudoDeMassas-e01/: Readme.html  Readme.md
EstudoDeMassasTesteRhino/: esdudoDeMassas01.gh  massa_01.sat  teste_rhino_01.3dm  teste_rhino_01.3dm.rhl  teste_rhino_01.3dmbak
Init_revit/: configura.md  instala.md
config_init/: configura.html
docs/: index.md
docs/Anotacoes/: cotas.md
docs/BIM_intro/: bim_intro.md  levels_mat.md  levels_uk.md
docs/Init_revit/: interface.md  ll_gr.md
docs/elementos_constructivos/: cobertura.md  paredes.md  vigas.md
docs/instala/: instala.md
docs/massa_e_terreno/: bpads.md
editorfamilias/: familiasPilares.html
elementos_constructivos/: cobertura.html  escadas.html  esquadrias.html  esquadrias.md  fundacoes.html  paredes.html  pilares.html  pilares.md  pisos.html  pisos.md  rampas.html  trelicas.html  vigas.html
init_revit/: instala.html  interface.html  ll_gr.html
massa_e_terreno/: bpads.html  massa.html  terrenos.html  terrenos.md
overrides/css/: extra_css.css
representacao/: representa.html  representa.md
revit/Anotacoes/: cota_nivel.html  cotas.html  dim.html  (+1 more)
slides_apresenta/: seminario_lcad.md
vinculosCad/: README.MD
(+163 files in other folders)
