[tool.poetry]
name = "intro_revit"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"
mkdocs-jupyter = "^0.21.0"
mkdocs-multilang = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"