[tool.poetry]
name = "intro_revit"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
mkdocs = "mkdocs jupyter"
mkdocs-material = "^8.5.11"
mkdocs-jupyter = "^0.22.0"
ipykernel = "^6.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pixi add python=3.13 pandas mkdocs mkdocs-material mkdocs-jupyter ipykernel